--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <button id="myButton">My button</button>
+    <span id="myButton">བཀྲ་ཤིས་བདེ་ལེགས</span>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
         <script>
