--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/light.css"/>
     <style>
     #ROOTEXT {
-        text-shadow: 3px 3px 3px #ababab;
         font-family: "Jomolhari", sans-serif;
         font-size: 30px;
     }
@@ -29,10 +28,12 @@
 
     <div style="display: none;">
         <div id="1"><div id="DEF">
-            འགྲེལ་བཤད་དང་པོ་ཡིན་ནོ།
+            འགྲེལ་བཤད་དང་པོ་ཡིན་ནོ།<br />
+            <a href="https://dictionary.christian-steinert.de/#%7B%22activeTerm%22%3A%22bkra%20shis%22%2C%22lang%22%3A%22tib%22%2C%22inputLang%22%3A%22tib%22%2C%22currentListTerm%22%3A%22bkra%20shis%22%2C%22forceLeftSideVisible%22%3Afalse%2C%22offset%22%3A0%7D" target="_blank"><strong>ཚིག་མཛོད་ལ་གཟིགས།</strong></a>
         </div></div>
         <div id="2"><div id="DEF">
-            འགྲེལ་བཤད་གཉིས་པ་ཡིན།
+            འགྲེལ་བཤད་གཉིས་པ་ཡིན།<br />
+            <a href="https://dictionary.christian-steinert.de/#%7B%22activeTerm%22%3A%22bde%20legs%22%2C%22lang%22%3A%22tib%22%2C%22inputLang%22%3A%22tib%22%2C%22currentListTerm%22%3A%22bde%20legs%22%2C%22forceLeftSideVisible%22%3Afalse%2C%22offset%22%3A0%7D" target="_blank"><strong>ཚིག་མཛོད་ལ་གཟིགས།</strong></a>
         </div></div>
     </div>
 
