--- a/index.html
+++ b/index.html
@@ -3,62 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jomolhari">
-    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/light.css"/>
     <style>
-    #ROOTEXT {
+    #TEXT {
         font-family: "Jomolhari", sans-serif;
-        font-size: 30px;
     }
-    #DEF {
-        font-family: "Jomolhari", sans-serif;
-        font-size: 20px;
-    }
-    .tippy-box[data-theme~='popup'] {
-        background-color: grey;
-        color: white;
-    }
-    span:hover {
-        background-color: oldlace;
-    }
-
+    .tab2 { margin-left: 40px; }
+    .tab3 { margin-left: 80px; }
+    .tab4 { margin-left: 120px; }
+    .tab5 { margin-left: 160px; }
     </style>
 </head>
-<body>
-    <p id="ROOTEXT"><span id="word" data-template="1">བཀྲ་ཤིས་</span><span id="word" data-template="2">བདེ་ལེགས།</span></p>
-
-    <div style="display: none;">
-        <div id="1"><div id="DEF">
-            འགྲེལ་བཤད་དང་པོ་ཡིན་ནོ།<br />
-            <a href="https://dictionary.christian-steinert.de/#%7B%22activeTerm%22%3A%22bkra%20shis%22%2C%22lang%22%3A%22tib%22%2C%22inputLang%22%3A%22tib%22%2C%22currentListTerm%22%3A%22bkra%20shis%22%2C%22forceLeftSideVisible%22%3Afalse%2C%22offset%22%3A0%7D" target="_blank"><strong>ཚིག་མཛོད་ལ་གཟིགས།</strong></a>
-        </div></div>
-        <div id="2"><div id="DEF">
-            འགྲེལ་བཤད་གཉིས་པ་ཡིན།<br />
-            <a href="https://dictionary.christian-steinert.de/#%7B%22activeTerm%22%3A%22bde%20legs%22%2C%22lang%22%3A%22tib%22%2C%22inputLang%22%3A%22tib%22%2C%22currentListTerm%22%3A%22bde%20legs%22%2C%22forceLeftSideVisible%22%3Afalse%2C%22offset%22%3A0%7D" target="_blank"><strong>ཚིག་མཛོད་ལ་གཟིགས།</strong></a>
-        </div></div>
-    </div>
-
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="https://unpkg.com/tippy.js@6"></script>
-    <script>
-        const word1 = document.getElementById('word1');
-
-        tippy('#word', {
-            content(reference) {
-                const id = reference.getAttribute('data-template');
-                const template = document.getElementById(id);
-                return template.innerHTML;
-            },
-            allowHTML: true,
-            animation: 'fade',
-            arrow: false,
-            duration: [3000, 500],
-            interactive: true,
-            maxWidth: 350,
-            offset: [10, -15],
-            placement: 'bottom-start',
-            theme: 'popup',
-        });
-    </script>
-
+<body id="TEXT">
+<h1>B1</h1>
+    <h2 class="tab2">བདུན་ཕྲག་དང་པོ།</h2>
+        <p class="tab3">ཀ༽ མཛད་བཅུ་ལས། གཟིགས་པ་རྣམ་ལྔ།</p>
+            <p class="tab4">༡༽ རྩ་ཚིག་བློ་འཛིན།</p>
+                <p class="tab5"><a href="B1/week1-lesson1-root-text.html">ཀ༽ རྩ་ཚིག</a></p>
+                <p class="tab5"><a href="B1/week1-lesson1-important-vocab.html">ག༽ ཚིག་གནད།</a></p>
+            <p class="tab4">༢༽ འགྲེལ་བ།</p>
+            <p class="tab4">༣༽ དཔེ་ཀློག</p>
+            <p class="tab4">༤༽ ལས་གཞི་དང་བགྲོ་གླེང་།</p>
 </body>
 </html>
