add noto sans in definitions + delay

--- a/B1/week1-lesson1-important-vocab.html
+++ b/B1/week1-lesson1-important-vocab.html
@@ -519,6 +519,7 @@
             offset: [0, 0],
             placement: 'bottom-start',
             theme: 'popup',
+            delay: 700,
         });
     </script>
 </body>
