--- a/B1/week1-lesson1-root-text.html
+++ b/B1/week1-lesson1-root-text.html
@@ -179,6 +179,7 @@
             offset: [0, 0],
             placement: 'bottom-start',
             theme: 'popup',
+            delay: 700,
         });
     </script>
 </body>
