--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <p class="tab5"><a href="B1/week1-lesson1-root-text.html">ཀ༽ རྩ་ཚིག</a></p>
                 <p class="tab5"><a href="B1/week1-lesson1-important-vocab.html">ག༽ ཚིག་གནད།</a></p>
             <p class="tab4">༢༽ འགྲེལ་བ།</p>
+                <p class="tab5"><a href="B1/week1-lesson1-commentary.html">ཀ༽ འགྲེལ་བཤད།</a></p>
             <p class="tab4">༣༽ དཔེ་ཀློག</p>
             <p class="tab4">༤༽ ལས་གཞི་དང་བགྲོ་གླེང་།</p>
 </body>
