--- a/index.html
+++ b/index.html
@@ -18,14 +18,30 @@
     <h2 class="tab2">བདུན་ཕྲག་དང་པོ།</h2>
         <p class="tab3">ཀ༽ མཛད་བཅུ་ལས། གཟིགས་པ་རྣམ་ལྔ།</p>
             <p class="tab4">༡༽ རྩ་ཚིག་བློ་འཛིན།</p>
-                <p class="tab5"><a href="B1/week1-lesson1-A-1-root-text.html">ཀ༽ རྩ་ཚིག</a></p>
-                <p class="tab5"><a href="B1/week1-lesson1-A-1-root-text_EN.html">ཀ༽ རྩ་ཚིག EN</a></p>
-                <p class="tab5"><a href="B1/week1-lesson1-A-2-important-vocab.html">ག༽ ཚིག་གནད།</a></p>
-                <p class="tab5"><a href="B1/week1-lesson1-A-2-important-vocab_EN.html">ག༽ ཚིག་གནད། EN</a></p>
+                <p class="tab5"><a href="B1/week1-A-1-ka-root_text.html">ཀ༽ རྩ་ཚིག</a></p>
+                <p class="tab5"><a href="B1/week1-A-1-ka-root_text_EN.html">ཀ༽ རྩ་ཚིག EN</a></p>
+                <p class="tab5"><a href="B1/week1-A-2-ga-important_vocab.html">ག༽ ཚིག་གནད།</a></p>
+                <p class="tab5"><a href="B1/week1-A-2-ga-important_vocab_EN.html">ག༽ ཚིག་གནད། EN</a></p>
             <p class="tab4">༢༽ འགྲེལ་བ།</p>
-                <p class="tab5"><a href="B1/week1-lesson1-B-1-commentary.html">ཀ༽ འགྲེལ་བཤད།</a></p>
-                <p class="tab5"><a href="B1/week1-lesson1-B-1-commentary_EN.html">ཀ༽ འགྲེལ་བཤད། EN</a></p>
+                <p class="tab5"><a href="B1/week1-B-1-ka-commentary.html">ཀ༽ འགྲེལ་བཤད།</a></p>
+                <p class="tab5"><a href="B1/week1-B-1-ka-commentary_EN.html">ཀ༽ འགྲེལ་བཤད། EN</a></p>
+                <p class="tab5"><a href="B1/week1-B-1-ga-important_vocab.html">ག༽ ཚིག་གནད།</a></p>
+                <p class="tab5"><a href="B1/week1-B-1-ga-important_vocab_EN.html">ག༽ ཚིག་གནད། EN</a></p>
             <p class="tab4">༣༽ དཔེ་ཀློག</p>
             <p class="tab4">༤༽ ལས་གཞི་དང་བགྲོ་གླེང་།</p>
+        <p class="tab3">ཁ༽ ལྷུམས་ཞུགས། སྐུ་བལྟམས། བཟོ་གནས་མཁས་པ། བཙུན་མོ་འཁོར་རོལ་བཅས།</p>
+            <p class="tab4">༡༽ རྩ་ཚིག་བློ་འཛིན།</p>
+                <p class="tab5"><a href="B1/week1-B-1-ka-root_text.html">ཀ༽ རྩ་ཚིག</a></p>
+                <p class="tab5"><a href="B1/week1-B-1-ka-root_text_EN.html">ཀ༽ རྩ་ཚིག EN</a></p>
+                <p class="tab5"><a href="B1/week1-B-1-ga-important_vocab.html">ག༽ ཚིག་གནད།</a></p>
+                <p class="tab5"><a href="B1/week1-B-1-ga-important_vocab_EN.html">ག༽ ཚིག་གནད། EN</a></p>
+            <p class="tab4">༢༽ འགྲེལ་བ།</p>
+                <p class="tab5"><a href="B1/week1-B-2-ka-commentary.html">ཀ༽ འགྲེལ་བཤད།</a></p>
+                <p class="tab5"><a href="B1/week1-B-2-ka-commentary_EN.html">ཀ༽ འགྲེལ་བཤད།</a></p>
+                <p class="tab5"><a href="B1/week1-B-2-cha-important_vocab.html">ག༽ ཚིག་གནད།</a></p>
+                <p class="tab5"><a href="B1/week1-B-2-cha-important_vocab_EN.html">ག༽ ཚིག་གནད། EN</a></p>
+            <p class="tab4">༣༽ དཔེ་ཀློག</p>
+            <p class="tab4">༤༽ ལས་གཞི་དང་བགྲོ་གླེང་།</p>
+
 </body>
 </html>
