--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <p class="tab4">༡༽ རྩ་ཚིག་བློ་འཛིན།</p>
                 <p class="tab5"><a href="B1/week1-A-1-ka-root_text.html">ཀ༽ རྩ་ཚིག</a></p>
                 <p class="tab5"><a href="B1/week1-A-1-ka-root_text_EN.html">ཀ༽ རྩ་ཚིག EN</a></p>
-                <p class="tab5"><a href="B1/week1-A-2-ga-important_vocab.html">ག༽ ཚིག་གནད།</a></p>
-                <p class="tab5"><a href="B1/week1-A-2-ga-important_vocab_EN.html">ག༽ ཚིག་གནད། EN</a></p>
+                <p class="tab5"><a href="B1/week1-A-1-ga-important_vocab.html">ག༽ ཚིག་གནད།</a></p>
+                <p class="tab5"><a href="B1/week1-A-1-ga-important_vocab_EN.html">ག༽ ཚིག་གནད། EN</a></p>
             <p class="tab4">༢༽ འགྲེལ་བ།</p>
-                <p class="tab5"><a href="B1/week1-B-1-ka-commentary.html">ཀ༽ འགྲེལ་བཤད།</a></p>
-                <p class="tab5"><a href="B1/week1-B-1-ka-commentary_EN.html">ཀ༽ འགྲེལ་བཤད། EN</a></p>
-                <p class="tab5"><a href="B1/week1-B-1-ga-important_vocab.html">ག༽ ཚིག་གནད།</a></p>
-                <p class="tab5"><a href="B1/week1-B-1-ga-important_vocab_EN.html">ག༽ ཚིག་གནད། EN</a></p>
+                <p class="tab5"><a href="B1/week1-A-2-ka-commentary.html">ཀ༽ འགྲེལ་བཤད།</a></p>
+                <p class="tab5"><a href="B1/week1-A-2-ka-commentary_EN.html">ཀ༽ འགྲེལ་བཤད། EN</a></p>
+                <p class="tab5"><a href="B1/week1-A-2-ca-important_vocab.html">ཅ༽ ཚིག་གནད།</a></p>
+                <p class="tab5"><a href="B1/week1-A-2-ca-important_vocab_EN.html">ཅ༽ ཚིག་གནད། EN</a></p>
             <p class="tab4">༣༽ དཔེ་ཀློག</p>
             <p class="tab4">༤༽ ལས་གཞི་དང་བགྲོ་གླེང་།</p>
         <p class="tab3">ཁ༽ ལྷུམས་ཞུགས། སྐུ་བལྟམས། བཟོ་གནས་མཁས་པ། བཙུན་མོ་འཁོར་རོལ་བཅས།</p>
@@ -37,9 +37,9 @@
                 <p class="tab5"><a href="B1/week1-B-1-ga-important_vocab_EN.html">ག༽ ཚིག་གནད། EN</a></p>
             <p class="tab4">༢༽ འགྲེལ་བ།</p>
                 <p class="tab5"><a href="B1/week1-B-2-ka-commentary.html">ཀ༽ འགྲེལ་བཤད།</a></p>
-                <p class="tab5"><a href="B1/week1-B-2-ka-commentary_EN.html">ཀ༽ འགྲེལ་བཤད།</a></p>
-                <p class="tab5"><a href="B1/week1-B-2-cha-important_vocab.html">ག༽ ཚིག་གནད།</a></p>
-                <p class="tab5"><a href="B1/week1-B-2-cha-important_vocab_EN.html">ག༽ ཚིག་གནད། EN</a></p>
+                <p class="tab5"><a href="B1/week1-B-2-ka-commentary_EN.html">ཀ༽ འགྲེལ་བཤད། EN</a></p>
+                <p class="tab5"><a href="B1/week1-B-2-cha-important_vocab.html">ཆ༽ ཚིག་གནད།</a></p>
+                <p class="tab5"><a href="B1/week1-B-2-cha-important_vocab_EN.html">ཆ༽ ཚིག་གནད། EN</a></p>
             <p class="tab4">༣༽ དཔེ་ཀློག</p>
             <p class="tab4">༤༽ ལས་གཞི་དང་བགྲོ་གླེང་།</p>
 
