update + automate all EN and normal html files

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 <p class="tab5"><a href="B1/week1-A-2-ca-important_vocab.html">ཅ༽ ཚིག་གནད།</a></p>
                 <p class="tab5"><a href="B1/week1-A-2-ca-important_vocab_EN.html">ཅ༽ ཚིག་གནད། EN</a></p>
             <p class="tab4">༣༽ དཔེ་ཀློག</p>
+                <p class="tab5"><a href="B1/week1-A-3-ka-root_commentary.html">ཀ༽ ཤེས་བྱ་ཀུན་ཁྱབ་རྩ་འགྲེལ།</a></p>
+                <p class="tab5"><a href="B1/week1-A-3-ka-root_commentary_EN.html">ཀ༽ ཤེས་བྱ་ཀུན་ཁྱབ་རྩ་འགྲེལ། EN</a></p>
             <p class="tab4">༤༽ ལས་གཞི་དང་བགྲོ་གླེང་།</p>
         <p class="tab3">ཁ༽ ལྷུམས་ཞུགས། སྐུ་བལྟམས། བཟོ་གནས་མཁས་པ། བཙུན་མོ་འཁོར་རོལ་བཅས།</p>
             <p class="tab4">༡༽ རྩ་ཚིག་བློ་འཛིན།</p>
