update + fix misplaced popup at bottom of pages

--- a/B1/week1-A-1-ga-important_vocab_EN.html
+++ b/B1/week1-A-1-ga-important_vocab_EN.html
@@ -1245,6 +1245,24 @@
             offset: [0, 0],
             placement: 'bottom-start',
             theme: 'popup',
+            popperOptions: {
+                strategy: 'fixed',
+                modifiers: [
+                    {
+                        name: 'flip',
+                        options: {
+                            fallbackPlacements: ['right', 'left'],
+                        },
+                    },
+                    {
+                        name: 'preventOverflow',
+                        options: {
+                            altAxis: true,
+                            tether: false,
+                        },
+                    }, 
+                ],
+            },
         });
     </script>
     <script>
